--- a/others.html
+++ b/others.html
@@ -88,7 +88,7 @@
    
     <!-- Catg Header Banner Section -->
     <section id="aa-catg-head-banner">
-      <img src="img/othersbanner.jpg" alt="banner img">
+      <img src="img/college/collegebanner.png" alt="banner img">
     </section>
 
     <!-- Photos -->
@@ -101,10 +101,7 @@
                 <div class="col-md-5 no-padding">                
                   <div class="aa-promo-left">
                     <div class="aa-promo-banner">                    
-                      <img src="img/donatepromo.jpg" alt="img">                    
-                      <div class="aa-prom-content">
-                        <h4><a href="selldonate.html">Donate</a></h4>                      
-                      </div>
+                      <img src="img/college/pussgrc.jpg" alt="img">                    
                     </div>
                   </div>
                 </div>
@@ -112,34 +109,22 @@
                   <div class="aa-promo-right">
                     <div class="aa-single-promo-right">
                       <div class="aa-promo-banner">                      
-                        <img src="img/stationeriespromo.jpg" alt="img">                      
-                        <div class="aa-prom-content">
-                          <h4><a href="stationaries.html">Stationaries</a></h4>                        
-                        </div>
+                        <img src="img/college/collegelogo.jfif" alt="img">                      
                       </div>
                     </div>
                     <div class="aa-single-promo-right">
                       <div class="aa-promo-banner">                      
-                        <img src="img/electronicspromo.jpg" alt="img">                      
-                        <div class="aa-prom-content">
-                          <h4><a href="electronics.html">Electronics</a></h4>                        
-                        </div>
+                        <img src="img/college/uiethoshiarpur.jpg" alt="img">                      
                       </div>
                     </div>
                     <div class="aa-single-promo-right">
                       <div class="aa-promo-banner">                      
-                        <img src="img/roomspromo.jpg" alt="img">                      
-                        <div class="aa-prom-content">
-                          <h4><a href="hostelpgrooms.html">Rooms</a></h4>                        
-                        </div>
+                        <img src="img/college/engineeringblock.jpg" alt="img">                      
                       </div>
                     </div>
                     <div class="aa-single-promo-right">
                       <div class="aa-promo-banner">                      
-                        <img src="img/otherspromo.jpg" alt="img">                      
-                        <div class="aa-prom-content">
-                          <h4><a href="others.html">College</a></h4>                        
-                        </div>
+                        <img src="img/college/hostel.jpg" alt="img">                      
                       </div>
                     </div>
                   </div>
@@ -159,36 +144,50 @@
             <div class="aa-product-details-area">
               <div class="aa-product-details-bottom">
                 <ul class="nav nav-tabs" id="myTab2">
-                  <li><a href="#description" data-toggle="tab">Description</a></li>
-                  <li><a href="#review" data-toggle="tab">Reviews</a></li>                
+                  <li><a href="#" data-toggle="tab">Description</a></li>
                 </ul>
-                <!-- Tab panes -->
                 <div class="tab-content">
                   <div class="tab-pane fade in active" id="description">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <p>Panjab University opened a Regional Centre for imparting quality technical education to Kandi Area Hoshiarpur with the name of Swami Sarvanand Giri Panjab University Regional Centre in year 2006 with four branches of Engineering. In 2007 Panjab university started two new courses in LAW as BALLB 5 year integrated course and 3 Years LLB course, and Master of Computer Applications (MCA). </p>
+                    <p>Dr Lajpat Rai Munger, a US citizen and the owner of largest blueberry farms in the world, who originally belonged to the village of Nangal Shahidan Hoshiarpur, adopted Swami Sarvanand Giri Maharaj as his guru. He bought 20 acres of property in the name of his guruji in Bajwara village on Una Road, 5 km from the court of Hoshiarpur and constructed a campus. Later, he handed it over to Panjab University. In February 2006, the campus became the Regional Centre of Panjab University.</p>
+                    <p><b>What sets us apart ?</b></p>
                     <ul>
-                      <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, culpa!</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
-                      <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                      <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor qui eius esse!</li>
-                      <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, modi!</li>
+                      <li>NAAC - A Grade to Panjab University.</li>
+                      <li>Admissions based purely on National rankings - AIEEE</li>
+                      <li>100% Post Graduate and research oriented faculty.</li>
+                      <li>State of the art infrastructure, a completely networked campus and top of the line computer centres.!</li>
+                      <li>Multi-disciplinary batch.</li>
+                      <li>Balanced course structure.</li>
+                      <li>Rigorous training in quantitative as well as qualitative analysis</li>
                     </ul>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, iusto earum voluptates autem esse molestiae ipsam, atque quam amet similique ducimus aliquid voluptate perferendis, distinctio!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis ea, voluptas! Aliquam facere quas cumque rerum dolore impedit, dicta ducimus repellat dignissimos, fugiat, minima quaerat necessitatibus? Optio adipisci ab, obcaecati, porro unde accusantium facilis repudiandae.</p>
+                    <p><b>Clubs & Societies</b></p>
+                    <ul>
+                      <li>SHOR - Official Theater Group</li>
+                      <li>Platform Tech Solutions - A WT Company & Official Technical Club</li>
+                      <li>Literati - The Literary Group</li>
+                      <li>DCult - The Official Dance Group</li>
+                      <li>Symphonic Vibrations - The Musical Group</li>
+                      <li>National Cadet Corps "Army Wing" (Under 12 PB BN NCC, Hoshiarpur)</li>
+                      <li>Hoshiarpur Mozilla Campus Club</li>
+                      <li>Ecell UIETH (Entrepreneurship Cell)</li>
+                    </ul>
+                    <p><b>Collaborations</b></p>
+                    <ul>
+                      <li>Texas Instruments - Provide assistance in terms of training and equipment for embedded systems.</li>
+                      <li>INFOSYS - Develop programming skills of promising programmers.</li>
+                      <li>IBM - PUSSGRC has an IBM center of excellence, conducting workshops, evaluation and technology sharing.</li>
+                    </ul>
                   </div>
+                  <ul class="nav nav-tabs" id="myTab2" style="border-top: #ddd 1px solid; margin: 30px 0px">
+                    <li><a href="#" data-toggle="tab">Reviews</a></li>
+                  </ul>
                   <div class="" id="review">
                     <div class="aa-product-review-area" style="overflow: visible;">
-                      <h4>Reviews for College</h4> 
                       <ul class="aa-review-nav">
                         <li>
                           <div class="media">
-                            <div class="media-left">
-                              <!-- <a href="#">
-                                <img class="media-object" src="img/testimonial-img-3.jpg" alt="girl image">
-                              </a> -->
-                            </div>
                             <div class="media-body">
-                              <h4 class="media-heading"><strong>Marla Jobs</strong> - <span>March 26, 2016</span></h4>
+                              <h4 class="media-heading"><strong>Swarnadip Pramanik</strong> - <span>Novemember 26, 2018</span></h4>
                               <div class="aa-product-rating">
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
@@ -196,32 +195,29 @@
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star-o"></span>
                               </div>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                              <p>Nice College. You can feel the nature here.</p>
                             </div>
                           </div>
                         </li>
                         <li>
                           <div class="media">
-                            <div class="media-left">
-                              <!-- <a href="#">
-                                <img class="media-object" src="img/testimonial-img-3.jpg" alt="girl image">
-                              </a> -->
-                            </div>
                             <div class="media-body">
-                              <h4 class="media-heading"><strong>Marla Jobs</strong> - <span>March 26, 2016</span></h4>
+                              <h4 class="media-heading"><strong>Raushan Kumar Mishra</strong> - <span>March 23, 2019</span></h4>
                               <div class="aa-product-rating">
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star-o"></span>
                                 <span class="fa fa-star-o"></span>
                               </div>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                              <p>The College is good but lacks behind in some of the facility.</p>
                             </div>
                           </div>
                         </li>
                     </ul>
-                    <h4>Add a review</h4>
+                    <ul class="nav nav-tabs" id="myTab2" style="border-top: #ddd 1px solid; margin: 50px 0px">
+                      <li><a href="#" data-toggle="tab">Add Your Review</a></li>
+                    </ul>
                     <div class="aa-your-rating">
                       <label for="message">Rating</label>
                       <a href="#"><span class="fa fa-star-o"></span></a>
@@ -230,7 +226,6 @@
                       <a href="#"><span class="fa fa-star-o"></span></a>
                       <a href="#"><span class="fa fa-star-o"></span></a>
                     </div>
-                    <!-- review form -->
                     <form action="" class="aa-review-form">
                         <div class="form-group">
                           <label for="message">Your Review</label>
@@ -242,7 +237,7 @@
                         </div>  
                         <div class="form-group">
                           <label for="email">Email</label>
-                          <input type="email" class="form-control" id="email" placeholder="example@gmail.com">
+                          <input type="email" class="form-control" id="email" placeholder="Email">
                         </div>
                         <button type="submit" class="btn btn-default aa-review-submit">Submit</button>
                       </form>
@@ -255,77 +250,6 @@
         </div>
       </div>      
     </section>
-
-    <!-- Product Category -->
-    <!-- <section id="aa-product-category">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-9 col-md-9 col-sm-8 col-md-push-3">
-            <div class="aa-product-catg-content">
-              <div class="aa-product-catg-head">
-                <div class="aa-product-catg-head-right">
-                  <a id="grid-catg" href="#"><span class="fa fa-th"></span></a>
-                  <a id="list-catg" href="#"><span class="fa fa-list"></span></a>
-                </div>
-              </div>
-              <div class="aa-product-catg-body">
-                <ul class="list aa-product-catg">
-                  <li>
-                    <figure>
-                      <a class="aa-product-img" href="#"><img src="img/college/uiethoshiarpur.jpg" alt="college img"></a>
-                      <figcaption>
-                        <h4 class="aa-product-title"><a href="#">UIET Hoshiarpur</a></h4>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
-                      </figcaption>
-                    </figure>                         
-                  </li>
-                  <li>
-                    <figure>
-                      <a class="aa-product-img" href="#"><img src="img/college/uietchandigarh.jpg" alt="college img"></a>
-                      <figcaption>
-                        <h4 class="aa-product-title"><a href="#">UIET Chandigarh</a></h4>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
-                      </figcaption>
-                    </figure>                         
-                  </li>
-                  <li>
-                    <figure>
-                      <a class="aa-product-img" href="#"><img src="img/college/ccet.jpg" alt="college img"></a>
-                      <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Chandigarh College of Engineering Technology</a></h4>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
-                      </figcaption>
-                    </figure>                         
-                  </li>
-                  <li>
-                    <figure>
-                      <a class="aa-product-img" href="#"><img src="img/college/pec.jpg" alt="college img"></a>
-                      <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Punjab Engineering College</a></h4>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
-                      </figcaption>
-                    </figure>                          
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-3 col-sm-4 col-md-pull-9">
-            <aside class="aa-sidebar">
-              <div class="aa-sidebar-widget">
-                <h3>Category</h3>
-                <ul class="aa-catg-nav">
-                  <li><a href="stationaries.html">Stationaries</a></li>
-                  <li><a href="electronics.html">Electronics</a></li>
-                  <li><a href="hostelpgrooms.html">Hostel/PG Rooms</a></li>
-                  <li><a href="others.html">College</a></li>
-                </ul>
-              </div>
-            </aside>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <!-- Subscribe Section -->
     <section id="aa-subscribe">
