--- a/others.html
+++ b/others.html
@@ -181,6 +181,36 @@
                   <ul class="nav nav-tabs" id="myTab2" style="border-top: #ddd 1px solid; margin: 30px 0px">
                     <li><a href="#" data-toggle="tab">Reviews</a></li>
                   </ul>
+                  <div class="row">
+                    <div class="col-lg-8">
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">5</div>
+                      </div>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">4</div>
+                      </div>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">3</div>
+                      </div>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 2%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">2</div>
+                      </div>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">1</div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4">
+                      <h2 style="text-align: center; color: black;">4.3</h2>
+                      <div class="aa-product-rating" style="text-align: center">
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star-o"></span>
+                      </div>
+                      <h5 style="text-align: center; top: 50%;">17 Reviews</h5>
+                    </div>
+                  </div>
                   <div class="" id="review">
                     <div class="aa-product-review-area" style="overflow: visible;">
                       <ul class="aa-review-nav">
