formspree api added

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     }
     .typewriter {
       position: absolute;
-      top: 50%;
-      left: 40%;
+      top: 30%;
+      left: 42.5%;
     }
     .typewriter h1 {
       color: #ffffff;
@@ -69,8 +69,8 @@
     .boom {
       opacity: 0;
       position: absolute;
-      top: 30%;
-      left: 50%;
+      top: 10%;
+      left: 57.5%;
       color: #fff;
       animation-name: fadebounce;
       animation-duration: 1.5s;
@@ -80,6 +80,7 @@
     }
     .boom h1 {
       font-weight: bolder;
+      font-family: "Century Gothic", sans-serif;
       font-size: 60px;
     }
     @keyframes fadebounce {
@@ -212,7 +213,7 @@
                     <h1>&ldquo;Yeh Hai College Ki Dukaan!&rdquo;</h1>
                   </div>
                   <div class="boom">
-                    <h1>CollegeAdda</h1>
+                    <h1><span style="color: #fff001">College</span><span style="color: #fbfefb">Adda</span></h1>
                   </div>
                 </div>
               </li>
