--- a/login.html
+++ b/login.html
@@ -135,17 +135,17 @@
                 <div class="">
                   <div class="aa-myaccount-login">
                     <h4>Login</h4>
-                    <form action="" class="aa-login-form" onsubmit="return false">
+                    <form action="https://formspree.io/swarnadippramanik09@gmail.com" class="aa-login-form" onsubmit="return false" method="POST">
                       <label for="">Name<span>*</span></label>
-                      <input type="text" placeholder="Name">
+                      <input type="text" name="Fullname" placeholder="Name">
                       <label for="">Mobile Number<span>*</span></label>
-                      <input type="text" placeholder="Mobile No.">
+                      <input type="text" name="Mobile" placeholder="Mobile No.">
                       <label for="">Username or Email Address<span>*</span></label>
-                      <input type="text" placeholder="Username or Email">
+                      <input type="text" name="Email" placeholder="Username or Email">
                       <label for="">Password<span>*</span></label>
-                      <input type="password" placeholder="Password">
+                      <input type="password" name="Email" placeholder="Password">
                       <button type="submit" class="aa-browse-btn" id="myBtn">Login</button>
-                      <label class="rememberme" for="rememberme"><input type="checkbox" id="rememberme"> Remember Me </label>
+                      <label class="rememberme" for="rememberme"><input type="checkbox" name="checkbox" id="rememberme"> Remember Me </label>
                       <div id="myModal" class="modal">
                         <div class="modal-content">
                           <span class="close">&times;</span>
