--- a/selldonate.html
+++ b/selldonate.html
@@ -156,22 +156,22 @@
                 <div class="">
                   <div class="aa-myaccount-login">
                     <h4>Details</h4>
-                    <form action="" class="aa-login-form" onsubmit="return false">
+                    <form action="https://formspree.io/swarnadippramanik09@gmail.com" class="aa-login-form" onsubmit="return false" method="POST">
                       <label for="">Name</label>
-                      <input type="text" placeholder="Name">
+                      <input type="text" name="Name" placeholder="Name">
                       <label for="">Mobile Number</label>
-                      <input type="text" placeholder="Mobile No.">
+                      <input type="text" name="Mobile" placeholder="Mobile No.">
                       <label for="">College Name</label>
-                      <input type="text" placeholder="College Name">
+                      <input type="text" name="College" placeholder="College Name">
                       <label for="">Branch & Year</label>
-                      <input type="text" placeholder="Branch/Year">
+                      <input type="text" name="Branch" placeholder="Branch/Year">
                       <label for="">Roll Number</label>
-                      <input type="text" placeholder="Roll No.">
+                      <input type="text" name="Roll" placeholder="Roll No.">
                       <fieldset>
                         <label for="">Choose One of the Following.....</label><br>
-                        <input type="radio" id="sell" name="product" value="option1">
+                        <input type="radio" id="sell" name="productoption" value="option1">
                         <label id="sd" for="sell">Sell </label>
-                        <input type="radio" id="donate" name="product" value="option2">
+                        <input type="radio" id="donate" name="productoption" value="option2">
                         <label for="donate">Donate </label>
                       </fieldset><br>
                       <div class="noshow1">
@@ -189,7 +189,7 @@
                       </div>
                       <div class="noshow2">
                         <label for="">Price</label>
-                        <input type="text" placeholder="Rs.">
+                        <input type="text" name="Price" placeholder="Rs.">
                         <label for="">Description</label><br>
                         <textarea id="message" name="message"></textarea><br>
                       </div>
