--- a/contact.html
+++ b/contact.html
@@ -108,33 +108,33 @@
                 <div class="row">
                   <div class="col-md-8">
                     <div class="aa-contact-address-left">
-                      <form class="comments-form contact-form" action="">
+                      <form class="comments-form contact-form" action="https://formspree.io/swarnadippramanik09@gmail.com" method="POST">
                         <div class="row">
                           <div class="col-md-6">
                             <div class="form-group">                        
-                              <input type="text" placeholder="Your Name" class="form-control">
+                              <input type="text" name="Fullname" placeholder="Your Name" class="form-control">
                             </div>
                           </div>
                           <div class="col-md-6">
                             <div class="form-group">                        
-                              <input type="email" placeholder="Email" class="form-control">
+                              <input type="email" name="Emailaddress" placeholder="Email" class="form-control">
                             </div>
                           </div>
                         </div>
                         <div class="row">
                           <div class="col-md-6">
                             <div class="form-group">                        
-                              <input type="text" placeholder="Subject" class="form-control">
+                              <input type="text" name="Subject" placeholder="Subject" class="form-control">
                             </div>
                           </div>
                           <div class="col-md-6">
                             <div class="form-group">                        
-                              <input type="text" placeholder="College" class="form-control">
+                              <input type="text" name="Collegename" placeholder="College" class="form-control">
                             </div>
                           </div>
                         </div>                  
                         <div class="form-group">                        
-                          <textarea class="form-control" rows="3" placeholder="Message"></textarea>
+                          <textarea class="form-control" name="Messagearea" rows="3" placeholder="Message"></textarea>
                         </div>
                         <button class="aa-secondary-btn">Send</button>
                       </form>
